fix: Update position of cross icon
Cross icon was overlapping the border the username field
when username suggestions were generated,
This PR fixes the position of cross icon of username
suggestions field

VAN-936

--- a/src/_style.scss
+++ b/src/_style.scss
@@ -866,7 +866,7 @@ select.form-control {
   margin-left: 15px;
 }
 .suggested-username-close-button {
-  right: 0;
+  right: 1rem;
   position: absolute;
 }
 .suggested-username-with-error {
